--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,21 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+//
+//    signingConfigs {
+//        debug {
+//            storeFile file("../keystore/debug.keystore")
+//            storePassword "android"
+//            keyAlias "androiddebugkey"
+//            keyPassword "android"
+//        }
+//        release {
+//            storeFile file("../keystore/debug.keystore")
+//            storePassword "android"
+//            keyAlias "androiddebugkey"
+//            keyPassword "android"
+//        }
+//    }
 
     buildTypes {
         release {
